--- a/Resume/style.css
+++ b/Resume/style.css
@@ -4,3 +4,10 @@ body, h1, h2, h3, h4, h5, p, li, ul li{ /*list of elements to style*/
     color: #444; /*gray*/
 }
 
+h1{
+    font-size: 3em; /*font size for my name*/
+    color: #33485e; /* font color is blue*/
+    text-transform: uppercase; /*makes name all uppercase*/
+    text-align: center; /*centers my name*/
+
+}
