--- a/Resume/style.css
+++ b/Resume/style.css
@@ -25,3 +25,8 @@ h2{
     color: white; /* font color is white */
     font-weight: 400; /*font weight*/
 }
+
+h3{
+    font-weight: 600; /*font weight*/
+    font-size: 1.5em; /*font size for job titles*/
+}
