--- a/Resume/style.css
+++ b/Resume/style.css
@@ -13,7 +13,7 @@ body, h1, h2, h3, h4, h5, p, li, ul li{ /*list of elements to style*/
     color: #33485e; /* font color is blue*/
     text-transform: uppercase; /*makes name all uppercase*/
     text-align: center; /*centers my name*/
-    border: 1px solid #33485e; /*border around my name*/
+    border-bottom: 1px solid #33485e; /*border below my name*/
     width: 60%, 300px; /*width of border*/
     margin: 0 auto; /*centers border*/
 }
