--- a/Resume/style.css
+++ b/Resume/style.css
@@ -30,7 +30,7 @@ strong{
     font-size: 1.5em; /*font size for section headers*/
     text-transform: uppercase; /*section headers are uppercase*/
     background-color: #33485e; /*background color is blue*/
-    color: white; /* font color is white */
+    color: blue; /* font color is white */
     font-weight: 400; /*font weight*/
     margin: 20px 0 10px 0; /*margin around section headers*/
     width: 70%; /*width of sectionheader*/
