--- a/Resume/style.css
+++ b/Resume/style.css
@@ -67,8 +67,8 @@ li{
 }
 
 #menu{
-    margin: 0px 0px 0px 0px; /*margin for contact info*/
-    padding: 0px 0px 0px 0px; /*padding for contact info*/
+    margin: 0px; /*margin for contact info*/
+    padding: 0px; /*padding for contact info*/
     text-align: center; /*aligns contact info horizontally*/
     display: inline; /*displays contact info inline*/
 }
