--- a/Resume/style.css
+++ b/Resume/style.css
@@ -70,7 +70,8 @@ li{
     margin: 0px; /*margin for contact info*/
     padding: 0px; /*padding for contact info*/
     text-align: center; /*aligns contact info horizontally*/
-    display: inline-block; /*displays contact info inline*/
+    display: inline; /*displays contact info inline*/
+    list-style-type: none; /*removes bullet points from contact info*/
     font-size: 1em; /*font size for info, skills and education*/
 }
 
