--- a/Resume/style.css
+++ b/Resume/style.css
@@ -26,7 +26,7 @@ strong {
 }
 
 /*styles for my section headers on resume*/
-#sectionheader { /*was h2*/
+.sectionheader { /*was h2*/
     font-size: 1.5em; /*font size for section headers*/
     text-transform: uppercase; /*section headers are uppercase*/
     background-color: #33485e; /*background color is blue*/
