--- a/bootstrapexercise/bootstrap-template.css
+++ b/bootstrapexercise/bootstrap-template.css
@@ -1,5 +1,5 @@
 .book-icon {
-    font-size: 3em; /*size of icons*/
+    size: 3em; /*size of icons*/
 }
 .chat-icon {
     font-size: 3em; /*size of icons*/
