--- a/bootstrapexercise/bootstrap-template.css
+++ b/bootstrapexercise/bootstrap-template.css
@@ -2,6 +2,10 @@
     align-items: center;
 }
 
+.bi-book{
+    font-size: 3em;
+}
+
 h2{
   font-family: "Special Elite", system-ui;
   font-weight: 400;
