--- a/bootstrapexercise/bootstrap-template.css
+++ b/bootstrapexercise/bootstrap-template.css
@@ -6,6 +6,14 @@
     font-size: 3em;
 }
 
+.bi-chat-square-dots{
+    font-size: 3em;
+}
+
+.bi-heart{
+    font-size: 3em;
+}
+
 h2{
   font-family: "Special Elite", system-ui;
   font-weight: 400;
