--- a/bootstrapexercise/bootstrap-template.css
+++ b/bootstrapexercise/bootstrap-template.css
@@ -20,3 +20,9 @@ h2{
   font-style: normal;
 }
 
+.special-elite-regular, h1, h2, h3, .navbar-brand, .btn{
+  font-family: "Special Elite", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
