--- a/bootstrapexercise/bootstrap-template.css
+++ b/bootstrapexercise/bootstrap-template.css
@@ -14,9 +14,8 @@
     font-size: 3em;
 }
 
-.special-elite-regular, h1, h2, h3, .navbar-brand,.button {
+.special-elite-regular, h1, h2, h3, .navbar-brand, .btn {
   font-family: "Special Elite", system-ui;
   font-weight: 400;
   font-style: normal;
 }
-
