--- a/bootstrapexercise/bootstrap-template.css
+++ b/bootstrapexercise/bootstrap-template.css
@@ -14,12 +14,9 @@
     font-size: 3em;
 }
 
-.special-elite-regular, h1, h2, h3, .navbar-brand, .btn {
+.special-elite-regular, h1, h2, h3, button, .navbar-brand {
   font-family: "Special Elite", system-ui;
   font-weight: 400;
   font-style: normal;
 }
 
-.btn{
-   font-family: "Special Elite", system-ui;
-}
