--- a/HeidermanLayout/stylesheet.css
+++ b/HeidermanLayout/stylesheet.css
@@ -5,8 +5,9 @@
 }
 
 .masthead {
-    font-size: 48px; /*masthead font size*/
+    font-size: 1.5 em; /*masthead font size*/
     font-family:'Times New Roman', Times, serif; /*masthead font*/
+    font-weight: 400; /*masthead font weight*/
     color: white; /*white masthead text*/
     background-color: green; /*green masthead background*/
 
