--- a/HeidermanLayout/stylesheet.css
+++ b/HeidermanLayout/stylesheet.css
@@ -4,3 +4,20 @@
     font-family:'Times New Roman', Times, serif, sans-serif; /*font family*/
 }
 
+.headline{
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.subhead{
+    font-size: 24px;
+    font-style: italic;
+    margin-bottom: 20px;
+}
+
+.byline{
+    font-size: 14px;
+    margin-bottom: 30px;
+    line-height: 1.5;
+}
