--- a/HeidermanLayout/stylesheet.css
+++ b/HeidermanLayout/stylesheet.css
@@ -17,7 +17,12 @@
 }
 
 .byline{
-    font-size: 10px;
+    font-size: 16px;
     margin-bottom: 30px;
     line-height: 1.5;
+}
+
+#content{
+    font-size: 16px;
+    line-height: 1.6;
 }
