--- a/HeidermanLayout/stylesheet.css
+++ b/HeidermanLayout/stylesheet.css
@@ -2,28 +2,30 @@
     margin: 0 auto;
     width: 900px;
     font-family:'Times New Roman', Times, serif, sans-serif; /*font family*/
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 .headline{
     margin: 0 auto;
+    width: 900px;
     font-size: 42px;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
 .subhead{
+    margin: 0 auto;
+    width: 900px;
     font-size: 20px;
     font-style: italic;
     margin-bottom: 20px;
 }
 
 .byline{
+    margin: 0 auto;
+    width: 900px;
     font-size: 16px;
     margin-bottom: 30px;
     line-height: 1.5;
-}
-
-#content{
-    font-size: 16px;
-    line-height: 1.6;
 }
