--- a/HeidermanLayout/stylesheet.css
+++ b/HeidermanLayout/stylesheet.css
@@ -29,7 +29,14 @@
     line-height: 1.5;
 }
 
-caption{
+.caption{
     font-size: 10px;
     color: gray;
+    margin-bottom: 20px;
+}
+
+.credit{
+    font-size: 10px;
+    color: gray;
+    margin-bottom: 20px;
 }
