--- a/HeidermanLayout/stylesheet.css
+++ b/HeidermanLayout/stylesheet.css
@@ -20,12 +20,11 @@
     margin-bottom: 20px;
 }
 
-.byline{
-    margin: 0 auto;
-    width: 900px;
-    font-size: 12px;
-    margin-bottom: 30px;
-    line-height: 1.5;
+
+#byline {
+font-family: Helvetica, sans-serif;
+font-size: 14px;
+font-style: italic;
 }
 
 .caption{
