--- a/HeidermanLayout/stylesheet.css
+++ b/HeidermanLayout/stylesheet.css
@@ -2,12 +2,13 @@
     margin: 0 auto;
     width: 900px;
     font-family:'Times New Roman', Times, serif, sans-serif; /*font family*/
-    line-height: 1.5;
+    font-size: 13px;
 }
 
-.headline{
+#headline{
     margin: 0 auto;
     width: 900px;
+    font-style: Helvetica, sans-serif;
     font-size: 42px;
     font-weight: bold;
     margin-bottom: 10px;
