--- a/HeidermanLayout/stylesheet.css
+++ b/HeidermanLayout/stylesheet.css
@@ -14,7 +14,7 @@
     margin-bottom: 10px;
 }
 
-.subhead{
+#subhead{
     font-size: 20px;
     margin-bottom: 20px;
 }
@@ -25,7 +25,6 @@ font-family: Helvetica, sans-serif;
 font-size: 14px;
 font-style: italic;
 }
-
 
 
 .caption{
