--- a/Midterm/Midterm.css
+++ b/Midterm/Midterm.css
@@ -4,15 +4,15 @@
 }
 
 #headline{
-    font-family: Helvetica;
+    font-family: Georgia, Helvetica;
 }
 
 #subhead1{
-    font-family: Helvetica;
+    font-family: Georgia, Helvetica;
 }
 
 #subhead2{
-    font-family: Helvetica;
+    font-family: Georgia, Helvetica;
 }
 
 
