--- a/Midterm/Midterm.css
+++ b/Midterm/Midterm.css
@@ -33,3 +33,10 @@
     font-size: 10px;
     color: grey;
 }
+
+#links{
+    font-family: Georgia, Helvetica;
+    font-size: 14px;
+    color: Grey;
+    text-align: center;
+}
