--- a/Midterm/Midterm.css
+++ b/Midterm/Midterm.css
@@ -6,7 +6,7 @@
 #headline{
     font-family: Georgia, Helvetica;
     font-size: 36px;
-    color: darkgreen;
+    color: rgb(1, 67, 1);
 }
 
 #subhead1{
