--- a/Midterm/Midterm.css
+++ b/Midterm/Midterm.css
@@ -45,7 +45,7 @@
 .Blockquote{
     font-family: Georgia, Helvetica;
     font-size: 36px;
-    color: green;
+    color: rgb(2, 74, 2);
     text-align: center;
     text-transform: uppercase;
 }
