--- a/Midterm/Midterm.css
+++ b/Midterm/Midterm.css
@@ -37,7 +37,7 @@
 #links{
     font-family: Georgia, Helvetica;
     font-size: 14px;
-    color: Grey;
+    color: rgb(2, 74, 2);
     text-align: center;
 }
 
