--- a/Resume/resume.css
+++ b/Resume/resume.css
@@ -3,7 +3,7 @@
 }
 
 .ABOUTME{
-     border-bottom: 1px solid #33485e; /*border below my name*/
+     border-bottom: 1px solid white; /*border below my name*/
     border-width: 60%, 300px; /*width of border*/
     margin-bottom: 0 auto; /*centers border*/
 
