--- a/Resume/resume.css
+++ b/Resume/resume.css
@@ -2,3 +2,10 @@
     align-items: center;
 }
 
+.profile-header{
+    border: 3px white;
+    border-radius: 10px;
+    padding: 40px;
+    margin: 40px auto;
+    max-width: 600px;
+}
