--- a/Resume/resume.css
+++ b/Resume/resume.css
@@ -4,6 +4,8 @@
 
 .topper{
     font-family: Georgia, Helvetica;
-    text-align: left;
 }
 
+.sectionheader{
+    font-family: Georgia, Helvetica;
+}
