--- a/Resume/resume.css
+++ b/Resume/resume.css
@@ -8,5 +8,6 @@
 
 .sectionheader{
     font-family: Georgia, Helvetica;
-    background-color: blue;
+    background-color: black;
+    color: white
 }
