--- a/Resume/resume.css
+++ b/Resume/resume.css
@@ -18,3 +18,11 @@
 .jobtitle{
     font-family: Georgia, Helvetica;
 }
+
+.organization{
+    font-family: Georgia, Helvetica;
+}
+
+.description{
+    font-family: Georgia, Helvetica;
+}
