--- a/Resume/resume.css
+++ b/Resume/resume.css
@@ -7,6 +7,10 @@
     background-color: navy;
 }
 
+.back{
+    background-color: navy;
+}
+
 .sectionheader{
     font-family: Georgia, Helvetica;
     background-color: black;
