--- a/Resume/resume.css
+++ b/Resume/resume.css
@@ -11,6 +11,10 @@
     background-color: navy;
 }
 
+.second{
+    color: navy;
+}
+
 .sectionheader{
     font-family: Georgia, Helvetica;
     background-color: navy;
