--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -9,3 +9,29 @@
     background-color: black;
     color: white;
 }
+
+.headline{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.byline{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    text-align: center;
+}
+
+.chaptertitle{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: start;
+}
+
+.chapter{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+    text-align: center;
+}
