--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -15,6 +15,7 @@
     font-size: 50px;
     font-weight: bold;
     text-align: center;
+    text-transform: uppercase;
 }
 
 .byline{
@@ -28,6 +29,7 @@
     font-size: 30px;
     font-weight: bold;
     text-align: start;
+    text-transform: uppercase;
 }
 
 .chapter{
