--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -12,6 +12,13 @@
     text-align: center;
 }
 
+.subhead{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+    font-style: italic;
+    text-align: center;
+}
+
 .byline{
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
