--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -33,7 +33,7 @@
 }
 
 .chapter{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
     font-size: 28px;
     text-align: start;
 }
