--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -38,7 +38,7 @@
     text-align: start;
 }
 
-.Blockquote{
+.blockquote{
     font-family: 'Georgia', 'Times New Roman', Times, serif;
     font-size: 30px;
     text-align: center;
