--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -1,32 +1,32 @@
 .caption{
     font-size: 10 px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
     color: grey;
     text-align: center;
 }
 
 .headline{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
     font-size: 50px;
     font-weight: bold;
     text-align: center;
 }
 
 .subhead{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
     font-size: 25px;
     font-style: italic;
     text-align: center;
 }
 
 .byline{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
     font-size: 20px;
     text-align: center;
 }
 
 .chaptertitle{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
     font-size: 30px;
     font-weight: bold;
     text-align: start;
