--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -8,7 +8,8 @@
 .headline{
     font-family: 'Georgia', 'Times New Roman', Times, serif;
     font-size: 50px;
-    font-weight: bold;
+    font-weight: bolder;
+
     text-align: center;
 }
 
