--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -41,7 +41,7 @@
     font-family: 'Georgia', 'Times New Roman', Times, serif;
     font-size: 40px;
     text-align: center;
-    color: red;
+    color: hotpink;
 }
 
 .navbar{
