--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -42,7 +42,7 @@
     font-size: 40px;
     text-align: center;
     color: hotpink;
-    border-top: 2px solid black;
+    font-weight: bold;
 }
 
 .navbar{
