--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -9,8 +9,8 @@
     font-family: 'Georgia', 'Times New Roman', Times, serif;
     font-size: 50px;
     font-weight: bolder;
-
     text-align: center;
+    color: hotpink;
 }
 
 .subhead{
