--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -47,3 +47,9 @@
 .navbar{
     font-family: 'Georgia', 'Times New Roman', Times, serif;
 }
+
+img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
