--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -63,3 +63,7 @@ img{
 .h2{
         font-family: 'Georgia', 'Times New Roman', Times, serif;
 }
+
+.row{
+        font-family: 'Georgia', 'Times New Roman', Times, serif;
+}
