--- a/html-frame/html-frame.css
+++ b/html-frame/html-frame.css
@@ -67,3 +67,7 @@ img{
 .row{
         font-family: 'Georgia', 'Times New Roman', Times, serif;
 }
+
+.footer{
+        font-family: 'Georgia', 'Times New Roman', Times, serif;
+}
