--- a/data-viz-project/html-frame.css
+++ b/data-viz-project/html-frame.css
@@ -71,3 +71,7 @@ img{
 .footer{
         font-family: 'Georgia', 'Times New Roman', Times, serif;
 }
+
+.text-center{
+            font-family: 'Georgia', 'Times New Roman', Times, serif;
+}
